# bop_toolkit

./: .gitignore
bop_toolkit_lib/: config.py  dataset_params.py
scripts/: calc_gt_info.py  eval_bop19_pose.py  vis_est_poses.py  vis_gt_poses.py
scripts/scenereplica_scripts/: create_dataset.py  overlay_image.py  process_grasping_data.py  write_pose_estimation.py
scripts/scenereplica_scripts/ycb_render/: CMakeLists.txt  test.py
scripts/scenereplica_scripts/ycb_render/cpp/: query_devices.cpp  test_device.cpp  ycb_renderer.cpp
